# chessApp

./: .gitignore  CMakeLists.txt
guiBoard/: CMakeLists.txt
guiBoard/include/: guiBoard.hpp
guiBoard/src/: guiBoard.cpp
src/: main.cpp
